test/negative/clafertransitionconstraint02.cfr
// Test for negative clafer constraint

a
 xor b ?  	
	==> d
  	d 
  	e 


/*

This is good. It fails as expected (unlike the prevoius case). 

*/

